--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,41 @@ h1{
 
 }
 body{
-    background-color: gray;
+    background-color:brown;
 }
 p{
     font-style: italic;
-    font-size: xx-large;
+    font-size: large;
 }
 img{
     height: 60%;
-    width: 60%;
+    width: 60%
 }
 .intro{
     background-color: indigo;
+}
+.image{
+    height: 80%;
+    width: 80%;
+    margin-top: 0%;
+    padding-left: 20%;
+    padding-right: 20%;
+}
+.contacts{
+    background-color: gray;
+    padding: 10%;
+}
+.activities{
+    background-color: brown;
+    padding: 10%;
+}
+.image2{
+    margin-right: 40%;
+    margin-left: 40%;
+}
+.travel{
+    background-color: brown;
+}
+.image3{
+    margin-right: 1%;
 }
